// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Rehook's trackEvent destination action: all fields 1`] = `
Object {
  "event_name": "c8Wjj300JvaVIqdQny0O",
  "metadata": Object {
    "testType": "c8Wjj300JvaVIqdQny0O",
  },
  "source_id": "c8Wjj300JvaVIqdQny0O",
}
`;

exports[`Testing snapshot for Rehook's trackEvent destination action: required fields 1`] = `
Object {
  "event_name": "c8Wjj300JvaVIqdQny0O",
  "source_id": "c8Wjj300JvaVIqdQny0O",
}
`;
